--- a/pom.xml
+++ b/pom.xml
@@ -85,6 +85,7 @@
         <mockito.version>1.10.19</mockito.version>
         <powermock.version>1.6.3</powermock.version>
         <jmh.version>1.12</jmh.version>
+        <bytebuddy.version>1.6.12</bytebuddy.version>
 
         <findbugs.version>1.3.2</findbugs.version>
 
