--- a/pom.xml
+++ b/pom.xml
@@ -79,6 +79,8 @@
         <!--- This is the last log4j2 version working with Java 6 -->
         <log4j2.version>2.3</log4j2.version>
         <slf4j.api.version>1.6.6</slf4j.api.version>
+        <!--- Disruptor is needed for async log4j2 logger -->
+        <disruptor.version>3.3.6</disruptor.version>
 
         <junit.version>4.12</junit.version>
         <hamcrest.version>1.3</hamcrest.version>
@@ -1032,6 +1034,13 @@
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
             <version>${log4j2.version}</version>
+            <scope>test</scope>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.lmax</groupId>
+            <artifactId>disruptor</artifactId>
+            <version>${disruptor.version}</version>
             <scope>test</scope>
             <optional>true</optional>
         </dependency>
