--- a/pom.xml
+++ b/pom.xml
@@ -30,10 +30,10 @@
 
     <modules>
         <module>hazelcast</module>
-        <module>hazelcast-client</module>
-        <module>hazelcast-spring</module>
-        <module>hazelcast-build-utils</module>
-        <module>hazelcast-all</module>
+        <!--<module>hazelcast-client</module>-->
+        <!--<module>hazelcast-spring</module>-->
+        <!--<module>hazelcast-build-utils</module>-->
+        <!--<module>hazelcast-all</module>-->
     </modules>
 
     <properties>
@@ -255,6 +255,11 @@
                         -Dhazelcast.phone.home.enabled=false
                         -Dhazelcast.mancenter.enabled=false
                         -Dhazelcast.test.use.network=false
+                        -XX:+UnlockCommercialFeatures
+                        -XX:+FlightRecorder
+                        -XX:StartFlightRecording=duration=7200s,filename=recording.jfr
+                        -XX:+UnlockDiagnosticVMOptions
+                        -XX:+DebugNonSafepoints
                     </argLine>
                     <includes>
                         <include>**/**.java</include>
@@ -307,6 +312,11 @@
                                         -Dhazelcast.logging.type=none
                                         -Dhazelcast.test.use.network=false
                                         -Dhazelcast.test.multiple.jvm=true
+                                        -XX:+UnlockCommercialFeatures
+                                        -XX:+FlightRecorder
+                                        -XX:StartFlightRecording=duration=7200s,filename=recording.jfr
+                                        -XX:+UnlockDiagnosticVMOptions
+                                        -XX:+DebugNonSafepoints
                                     </argLine>
                                     <includes>
                                         <include>**/**.java</include>
