--- a/pom.xml
+++ b/pom.xml
@@ -255,11 +255,11 @@
                         -Dhazelcast.phone.home.enabled=false
                         -Dhazelcast.mancenter.enabled=false
                         -Dhazelcast.test.use.network=false
-                         -XX:+UnlockCommercialFeatures
-                         -XX:+FlightRecorder
-                         -XX:StartFlightRecording=duration=7200s,filename=recording.jfr
-                         -XX:+UnlockDiagnosticVMOptions
-                         -XX:+DebugNonSafepoints
+                         <!-- -XX:+UnlockCommemvrcialFeatures-->
+                         <!-- -XX:+FlightRecorder-->
+                         <!-- -XX:StartFlightRecording=duration=7200s,filename=recording.jfr-->
+                         <!-- -XX:+UnlockDiagnosticVMOptions-->
+                         <!-- -XX:+DebugNonSafepoints-->
                     </argLine>
                     <includes>
                         <include>**/**.java</include>
@@ -312,11 +312,11 @@
                                         -Dhazelcast.logging.type=none
                                         -Dhazelcast.test.use.network=false
                                         -Dhazelcast.test.multiple.jvm=true
-                                         -XX:+UnlockCommercialFeatures
-                                         -XX:+FlightRecorder
-                                         -XX:StartFlightRecording=duration=7200s,filename=recording.jfr
-                                         -XX:+UnlockDiagnosticVMOptions
-                                         -XX:+DebugNonSafepoints
+                                          <!-- -XX:+UnlockCommercialFeatures-->
+                                          <!-- -XX:+FlightRecorder-->
+                                          <!-- -XX:StartFlightRecording=duration=7200s,filename=recording.jfr-->
+                                          <!-- -XX:+UnlockDiagnosticVMOptions-->
+                                          <!-- -XX:+DebugNonSafepoints-->
                                     </argLine>
                                     <includes>
                                         <include>**/**.java</include>
